fixing the unexpected openmrs hunging when rwanda emr module is installed